# GlyphPlay

./: README.md  font_data.py  glyphplay_qt.py  main.py  pyproject.toml  requirements.txt
