[project]
name = "glyphplay"
version = "0.1.0"
description = "A gestural font editor using hand tracking"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python==4.12.0.88",
    "mediapipe==0.10.14",
    "numpy==2.2.6",
    "scipy",
    "perlin-noise",
    "pyqt6",
]
